@@ -31,8 +31,8 @@ Usage::
     oindex = geo.get_geo_index()
     pname  = geo.get_parent_name()
     pindex = geo.get_parent_index()
-    X,Y,Z  = geo.get_pixel_coords()
-    X,Y    = geo.get_2d_pixel_coords()
+    X,Y,Z  = geo.get_pixel_coords(do_tilt=true)
+    X,Y    = geo.get_2d_pixel_coords(do_tilt=true)
     area   = geo.get_pixel_area()
     #mbits = +1-edges, +2-wide pixels, +4-non-bounded pixels, +8-neighbours of non-bounded
     mask   = geo.get_pixel_mask(mbits=0377)
@@ -42,8 +42,8 @@ Usage::
     # private methods for internal consumption:
     geo.set_parent(parent)
     geo.add_child(child)
-    Xt, Yt, Zt = geo.transform_geo_coord_arrays(X, Y, Z, do_tilt = True)
-    Xt, Yt     = geo.transform_2d_geo_coord_arrays(X, Y, do_tilt = True)
+    Xt, Yt, Zt = geo.transform_geo_coord_arrays(X, Y, Z, do_tilt=True)
+    Xt, Yt     = geo.transform_2d_geo_coord_arrays(X, Y, do_tilt=True)
 
     # global methods:
     Xrot, Yrot = rotation_cs(X, Y, C, S)
@@ -246,7 +246,7 @@ class GeometryObject :
 
 #------------------------------
 
-    def transform_geo_coord_arrays(self, X, Y, Z, do_tilt = True) :
+    def transform_geo_coord_arrays(self, X, Y, Z, do_tilt=True) :
         """ Transform geometry object coordinates to the parent frame
         """
         angle_z = self.rot_z + self.tilt_z if do_tilt else self.rot_z
@@ -265,12 +265,12 @@ class GeometryObject :
 
 #------------------------------
 
-    def get_pixel_coords(self) :
+    def get_pixel_coords(self, do_tilt=True) :
         """ Returns three numpy arrays with pixel X, Y, Z coordinates for self geometry object
         """
         if self.algo is not None :
             xac, yac, zac = self.algo.pixel_coord_array()
-            return self.transform_geo_coord_arrays(xac, yac, zac)
+            return self.transform_geo_coord_arrays(xac, yac, zac, do_tilt)
 
         xac, yac, zac = None, None, None
         for ind, child in enumerate(self.list_of_children) :
@@ -278,7 +278,7 @@ class GeometryObject :
                 print 'WARNING! Geometry object %s:%d has non-consequtive index in calibration file, reconst index:%d' % \
                       (child.oname, child.oindex, ind)
 
-            xch, ych, zch = child.get_pixel_coords()
+            xch, ych, zch = child.get_pixel_coords(do_tilt)
 
             if ind==0 :
                 xac = xch
@@ -297,7 +297,7 @@ class GeometryObject :
         xac.shape = geo_shape
         yac.shape = geo_shape
         zac.shape = geo_shape
-        X, Y, Z = self.transform_geo_coord_arrays(xac, yac, zac)
+        X, Y, Z = self.transform_geo_coord_arrays(xac, yac, zac, do_tilt)
         return self.det_shape(X), self.det_shape(Y), self.det_shape(Z) 
 
 #------------------------------
@@ -385,7 +385,7 @@ class GeometryObject :
 #------------------------------
 #------------------------------
 
-    def transform_2d_geo_coord_arrays(self, X, Y, do_tilt = True) :
+    def transform_2d_geo_coord_arrays(self, X, Y, do_tilt=True) :
         """ Simplified version of transform_geo_coord_arrays(...) for 2-d case
         """
         angle_z = self.rot_z + self.tilt_z if do_tilt else self.rot_z
@@ -396,21 +396,21 @@ class GeometryObject :
 
 #------------------------------
 
-    def get_2d_pixel_coords(self) :
+    def get_2d_pixel_coords(self, do_tilt=True) :
         """ Simplified version of get_pixel_coords() for 2-d case 
         """
         #if self.oname == 'SENS2X1:V1' : 
         if self.algo is not None :
             #xac, yac, zac = self.algo.get_xyz_maps_um()
             xac, yac, zac = self.algo.pixel_coord_array()
-            return self.transform_2d_geo_coord_arrays(xac, yac)
+            return self.transform_2d_geo_coord_arrays(xac, yac, do_tilt)
 
         xac, yac = [], []
         for child in self.list_of_children :
-            xch, ych = child.get_2d_pixel_coords()
+            xch, ych = child.get_2d_pixel_coords(do_tilt)
             xac += list(xch.flatten())
             yac += list(ych.flatten())
-        X, Y = self.transform_2d_geo_coord_arrays(np.array(xac), np.array(yac))
+        X, Y = self.transform_2d_geo_coord_arrays(np.array(xac), np.array(yac), do_tilt)
         return self.det_shape(X), self.det_shape(Y) 
 
 
@@ -420,6 +420,7 @@ class GeometryObject :
     def det_shape(self, arr) :
         """ Check detector dependency and re-shape array if necessary
         """
+        print 'arr.size: %d   self.oname: %s' % (arr.size, self.oname)
         if arr.size == 143560 and self.oname == 'CSPAD2X2:V1' : # Shuffle pixels once for 2*185*388 and CSPAD2X2:V1 ONLY:
             # shaffle array for cspad2x2
             return two2x1ToData2x2(arr)
